[gd_scene format=3 uid="uid://d32l8rtuuhpmy"]

[ext_resource type="Script" uid="uid://qvma7m2dg0un" path="res://scripts/hud.gd" id="1_64ctp"]
[ext_resource type="FontFile" uid="uid://nw0dhy4c6t3o" path="res://assets/fonts/Xolonium-Regular.ttf" id="2_8sq4i"]
[ext_resource type="Texture2D" uid="uid://cha62pradyww2" path="res://assets/HUD/gui/gui_buttons_vol1/sprites/buttons/g21526.png" id="3_6fi6k"]
[ext_resource type="Texture2D" uid="uid://dvqgk3iptryt6" path="res://assets/HUD/gui/gui_buttons_vol1/sprites/buttons/g23174.png" id="4_uo2fv"]

[sub_resource type="InputEventAction" id="InputEventAction_64ctp"]
action = &"start_game"

[sub_resource type="Shortcut" id="Shortcut_8sq4i"]
events = [SubResource("InputEventAction_64ctp")]

[sub_resource type="InputEventAction" id="InputEventAction_6fi6k"]
action = &"pause_game"

[sub_resource type="Shortcut" id="Shortcut_uo2fv"]
events = [SubResource("InputEventAction_6fi6k")]

[node name="HUD" type="CanvasLayer" unique_id=84231853]
script = ExtResource("1_64ctp")

[node name="ScoreLabel" type="Label" parent="." unique_id=2103883676]
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 78.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("2_8sq4i")
theme_override_font_sizes/font_size = 64
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HighScoreLabel" type="Label" parent="." unique_id=1623774561]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -35.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = 53.0
grow_horizontal = 0
theme_override_fonts/font = ExtResource("2_8sq4i")
theme_override_font_sizes/font_size = 35
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Message" type="Label" parent="." unique_id=1614300194]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -240.0
offset_top = -37.5
offset_right = 240.0
offset_bottom = 37.5
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 25
text = "Dodge the Fishes!	"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="StartButton" type="Button" parent="." unique_id=2006109384]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -50.0
offset_top = -156.0
offset_right = 50.0
offset_bottom = -56.0
grow_horizontal = 2
grow_vertical = 0
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_font_sizes/font_size = 30
shortcut = SubResource("Shortcut_8sq4i")
icon = ExtResource("3_6fi6k")
flat = true
expand_icon = true

[node name="PauseButton" type="TextureButton" parent="." unique_id=1083540566]
process_mode = 3
offset_left = 10.0
offset_top = 10.0
offset_right = 74.0
offset_bottom = 74.0
toggle_mode = true
shortcut = SubResource("Shortcut_uo2fv")
texture_normal = ExtResource("4_uo2fv")
texture_pressed = ExtResource("3_6fi6k")

[node name="MessageTimer" type="Timer" parent="." unique_id=1709370397]
wait_time = 2.0
one_shot = true

[connection signal="pressed" from="StartButton" to="." method="on_start_button_pressed"]
[connection signal="pressed" from="PauseButton" to="." method="_on_pause_button_pressed"]
